feat(projects): add named ast search
